--- a/day5,6,7/index.html
+++ b/day5,6,7/index.html
@@ -33,18 +33,20 @@
   </head>
   <body>
     <nav>
-      <div class="logo">
-        <img src="./img/flame.png" width="30" alt="logo" />
-        <p class="logo-name">ECOMMERCE</p>
-      </div>
-      <ul class="nav-items">
-        <li class="nav-item"><a href="">Home</a></li>
-        <li class="nav-item"><a href="">Products</a></li>
-        <li class="nav-item"><a href="">About us</a></li>
-        <li class="nav-item"><a href="">Contact</a></li>
-      </ul>
-      <div class="mobile-menu">
-        <span class="material-symbols-outlined"> menu </span>
+      <div class="navbar">
+        <div class="logo">
+          <img src="./img/flame.png" width="30" alt="logo" />
+          <p class="logo-name">ECOMMERCE</p>
+        </div>
+        <ul class="nav-items">
+          <li class="nav-item"><a href="">Home</a></li>
+          <li class="nav-item"><a href="">Products</a></li>
+          <li class="nav-item"><a href="">About us</a></li>
+          <li class="nav-item"><a href="">Contact</a></li>
+        </ul>
+        <div class="mobile-menu">
+          <span class="material-symbols-outlined"> menu </span>
+        </div>
       </div>
     </nav>
 
