--- a/day5,6,7 ecommerce/index.html
+++ b/day5,6,7 ecommerce/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Rubik&display=swap"
       rel="stylesheet"
     />
 
@@ -38,10 +38,14 @@
         <p class="logo-name">ECOMMERCE</p>
       </div>
       <ul class="nav-items">
-        <li class="nav-item"><a href="">Home</a></li>
-        <li class="nav-item"><a href="">Products</a></li>
-        <li class="nav-item"><a href="">About us</a></li>
-        <li class="nav-item"><a href="">Contact</a></li>
+        <li class="nav-item"><a href="#home">Home</a></li>
+        <li class="nav-item"><a href="#products">Products</a></li>
+        <li class="nav-item"><a href="#about-us">About us</a></li>
+        <li class="nav-item"><a href="#contact">Contact</a></li>
+        <li class="nav-item nav-search">
+          <input type="text" />
+          <span class="material-symbols-outlined"> search </span>
+        </li>
       </ul>
       <div class="mobile-menu">
         <span class="material-symbols-outlined"> menu </span>
@@ -49,7 +53,7 @@
     </nav>
 
     <div class="wrapper">
-      <section class="header">
+      <section class="header" id="top">
         <img class="background" src="./img/banner.jpg" alt="" />
         <div class="hero-text">
           <h1 class="title">Featured<br />Products</h1>
@@ -57,124 +61,145 @@
         </div>
       </section>
 
-      <section class="carousel carousel-dark">
-        <div
-          id="carouselExampleIndicators"
-          class="carousel slide"
-          data-ride="carousel"
-        >
-          <div class="carousel-indicators">
-            <button
-              type="button"
-              data-bs-target="#carouselExampleIndicators"
-              data-bs-slide-to="0"
-              class="active"
-              aria-current="true"
-              aria-label="Slide 1"
-            ></button>
-            <button
-              type="button"
-              data-bs-target="#carouselExampleIndicators"
-              data-bs-slide-to="1"
-              aria-label="Slide 2"
-            ></button>
-            <button
-              type="button"
-              data-bs-target="#carouselExampleIndicators"
-              data-bs-slide-to="2"
-              aria-label="Slide 3"
-            ></button>
-          </div>
-          <div class="carousel-inner" data-ride="carousel">
-            <div class="carousel-item active" data-interval="1000">
-              <img src="./img/carousel1.jpg" class="d-block w-100" alt="..." />
-            </div>
-            <div class="carousel-item">
-              <img src="./img/carousel2.jpg" class="d-block w-100" alt="..." />
-            </div>
-            <div class="carousel-item">
-              <img src="./img/carousel3.jpg" class="d-block w-100" alt="..." />
-            </div>
-          </div>
-          <button
-            class="carousel-control-prev"
-            type="button"
-            data-bs-target="#carouselExampleIndicators"
-            data-bs-slide="prev"
+      <section class="carousel-container">
+        <div class="carousel carousel-dark">
+          <div
+            id="carouselExampleIndicators"
+            class="carousel slide"
+            data-ride="carousel"
           >
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button
-            class="carousel-control-next"
-            type="button"
-            data-bs-target="#carouselExampleIndicators"
-            data-bs-slide="next"
-          >
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
+            <div class="carousel-indicators">
+              <button
+                type="button"
+                data-bs-target="#carouselExampleIndicators"
+                data-bs-slide-to="0"
+                class="active"
+                aria-current="true"
+                aria-label="Slide 1"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleIndicators"
+                data-bs-slide-to="1"
+                aria-label="Slide 2"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleIndicators"
+                data-bs-slide-to="2"
+                aria-label="Slide 3"
+              ></button>
+            </div>
+            <div class="carousel-inner" data-ride="carousel">
+              <div class="carousel-item active" data-interval="1000">
+                <img
+                  src="./img/carousel1.jpg"
+                  class="d-block w-100"
+                  alt="..."
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="./img/carousel2.jpg"
+                  class="d-block w-100"
+                  alt="..."
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="./img/carousel3.jpg"
+                  class="d-block w-100"
+                  alt="..."
+                />
+              </div>
+            </div>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
         </div>
       </section>
 
       <section class="products">
         <h1
           style="
-            text-align: center;
-            margin: 0;
             padding-top: 50px;
-            font-size: 40px;
+            margin: 0;
+            text-align: center;
+            font-size: 30px;
+            font-weight: bold;
           "
         >
-          Products
+          PRODUCTS
         </h1>
         <div class="items">
           <div class="item item1">
             <img src="./img/shoes.jpg" alt="shoes" width="100%" />
             <div class="item-content">
               <h3 style="font-size: 30px">SHOES</h3>
-              <button class="item-btn">Buy</button>
+              <!-- <button class="item-btn">Buy</button> -->
             </div>
           </div>
           <div class="item item2">
             <img src="./img/shoes.jpg" alt="shoes" width="100%" />
             <div class="item-content">
               <h3 style="font-size: 30px">SHOES</h3>
-              <button class="item-btn">Buy</button>
+              <!-- <button class="item-btn">Buy</button> -->
             </div>
           </div>
           <div class="item item3">
             <img src="./img/shoes.jpg" alt="shoes" width="100%" />
             <div class="item-content">
               <h3 style="font-size: 30px">SHOES</h3>
-              <button class="item-btn">Buy</button>
+              <!-- <button class="item-btn">Buy</button> -->
             </div>
           </div>
           <div class="item item4">
             <img src="./img/shoes.jpg" alt="shoes" width="100%" />
             <div class="item-content">
               <h3 style="font-size: 30px">SHOES</h3>
-              <button class="item-btn">Buy</button>
+              <!-- <button class="item-btn">Buy</button> -->
             </div>
           </div>
           <div class="item item5">
             <img src="./img/shoes.jpg" alt="shoes" width="100%" />
             <div class="item-content">
               <h3 style="font-size: 30px">SHOES</h3>
-              <button class="item-btn">Buy</button>
+              <!-- <button class="item-btn">Buy</button> -->
             </div>
           </div>
           <div class="item item6">
             <img src="./img/shoes.jpg" alt="shoes" width="100%" />
             <div class="item-content">
               <h3 style="font-size: 30px">SHOES</h3>
-              <button class="item-btn">Buy</button>
+              <!-- <button class="item-btn">Buy</button> -->
             </div>
           </div>
         </div>
       </section>
 
-      <section class="limited-edition">
+      <section class="limited-edition" id="le">
         <div class="limited-edition-text">
           <h5>Limited Time Offer</h5>
           <h2>Special Edition</h2>
@@ -220,37 +245,51 @@
 
       <hr style="margin: 0" />
       <footer>
-        <div class="company">
-          <div class="company-logo">
-            <img src="./img/flame.png" width="30" alt="" />
-            <h2>ECOMMERCE</h2>
+        <div class="footer-content">
+          <div class="company">
+            <div class="company-logo">
+              <a href="#top">
+                <img src="./img/flame.png" width="30" alt=""
+              /></a>
+              <a href="#top"> <h2>ECOMMERCE</h2></a>
+            </div>
+            <p>The best look anytime, anywhere</p>
           </div>
-          <p>The best look anytime,anywhere</p>
-        </div>
-        <div class="her">
-          <h2>For Her</h2>
-          <ul>
-            <li class="footer-list-item">Women Jeans</li>
-            <li class="footer-list-item">Tops and shirts</li>
-            <li class="footer-list-item">Women Jackets</li>
-            <li class="footer-list-item">Heels and jackets</li>
-          </ul>
-        </div>
-        <div class="him">
-          <h2>For Him</h2>
-          <ul>
-            <li class="footer-list-item">Men Jeans</li>
-            <li class="footer-list-item">Men shirts</li>
-            <li class="footer-list-item">Men Shoes</li>
-            <li class="footer-list-item">Men jackets</li>
-          </ul>
-        </div>
-        <div class="subscribe">
-          <h2>Subscribe</h2>
-          <div>
-            <input type="text" placeholder="Enter email..." /><br />
-            <button class="subscribe-btn">Submit</button>
+          <div class="her">
+            <h2>For Her</h2>
+            <ul>
+              <li class="footer-list-item">Women Jeans</li>
+              <li class="footer-list-item">Tops and shirts</li>
+              <li class="footer-list-item">Women Jackets</li>
+              <li class="footer-list-item">Heels and jackets</li>
+            </ul>
           </div>
+          <div class="him">
+            <h2>For Him</h2>
+            <ul>
+              <li class="footer-list-item">Men Jeans</li>
+              <li class="footer-list-item">Men shirts</li>
+              <li class="footer-list-item">Men Shoes</li>
+              <li class="footer-list-item">Men jackets</li>
+            </ul>
+          </div>
+          <div class="subscribe">
+            <h2>Subscribe</h2>
+            <div>
+              <input type="text" placeholder="Enter email..." /><br />
+              <button class="subscribe-btn">Submit</button>
+            </div>
+          </div>
+        </div>
+        <div class="footer-copyright">
+          &copy; 2023, Ecommerce.com, Inc. or its affiliates
+        </div>
+        <div class="footer-arrow">
+          <a href="#top">
+            <span style="font-size: 40px" class="material-symbols-outlined">
+              arrow_upward
+            </span>
+          </a>
         </div>
       </footer>
     </div>
