--- a/day5,6,7,8 ecommerce/index.html
+++ b/day5,6,7,8 ecommerce/index.html
@@ -199,7 +199,7 @@
         </div>
       </section>
 
-      <section class="limited-edition" id="le">
+      <section class="limited-edition">
         <div class="limited-edition-text">
           <h5>Limited Time Offer</h5>
           <h2>Special Edition</h2>
