--- a/day5,6,7,8 ecommerce/index.html
+++ b/day5,6,7,8 ecommerce/index.html
@@ -144,7 +144,7 @@
       <section class="products">
         <h1
           style="
-            padding-top: 50px;
+            padding-top: 8rem;
             margin: 0;
             text-align: center;
             font-size: 30px;
